compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/Compliance_Agent_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata used to set the related object and the fields to be reviewed by the agent.</description>
    <label>Compliance Agent Setting</label>
    <pluralLabel>Compliance Agent Settings</pluralLabel>
</CustomObject>