compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this Compliance Agent Setting is available for use. Only active settings can be executed by the Compliance Agent framework.</description>
    <inlineHelpText>Help Text: Enable this review configuration. Clear this option to temporarily disable it without deleting the setting.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>