compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>Object where the Compliance Agent component is placed..</description>
    <inlineHelpText>Object where the Compliance Agent component is placed.</inlineHelpText>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Settings</relationshipLabel>
    <relationshipName>Compliance_Agent_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>