compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/fields/Source_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Relationship_Field__c</fullName>
    <description>Field on the Source Object that points to the Target Object, used when the lookup lives on the Source side of the relationship.</description>
    <inlineHelpText>Select this only when the Source Object holds the reference to the Target Object. Leave blank if the reference lives on the Target side instead.</inlineHelpText>
    <label>Source Relationship Field</label>
    <metadataRelationshipControllingField>Compliance_Agent_Setting__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Settings</relationshipLabel>
    <relationshipName>Compliance_Agent_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>