compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Container object for the contract to be evaluated.</description>
    <inlineHelpText>Container object for the contract to be evaluated.</inlineHelpText>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Settings1</relationshipLabel>
    <relationshipName>Compliance_Agent_Settings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>