compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/fields/Target_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Relationship_Field__c</fullName>
    <description>Field on the Target Object that points to the Source Object, used when the lookup lives on the Target side of the relationship.</description>
    <inlineHelpText>Select this only when the Target Object holds the reference to the Source Object. Leave blank if the reference lives on the Source side instead.</inlineHelpText>
    <label>Target Relationship Field</label>
    <metadataRelationshipControllingField>Compliance_Agent_Setting__mdt.Target_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Settings1</relationshipLabel>
    <relationshipName>Compliance_Agent_Settings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>