compliance-reviewer/main/default/objects/Compliance_Agent_Setting__mdt/listViews/My_Settings_View.listView-meta.xml
<ListView>
    <fullName>My_Settings_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Target_Object__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>My Settings View</label>
    <language>en_US</language>
</ListView>